--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Help Expat Berlin</title>
+    <header><h1>Help Expat Berlin</h1></header>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+<main>
