--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>HEP<% if (user) { %> - <%= user.username %><% } %></title>
     <header><h1>Help Expat Berlin</h1></header>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+<% if (error) { %> <div class="error-banner">Error: <%= error %></div><% } %>
 <main>
