--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <input class="password" type="password" name="password"><br>
     <input type="submit" value="OK">
 </form><br>
+<a href="users/facebook" class="fb_connect">Connect with Facebook</a><br>
 <a href="users/account-create" class="new-account">Create a new account</a>
 <% } else { %>
 <div class="logged-in">You are logged in as <%= user.username %></div><br>
