--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -2,10 +2,8 @@
 
 <form id="login-form" method="post" action="./new">
     <h2>Create a new user</h2>
-    <label>First name</label><br>
-    <input class="first-name" type="text" name="firstName"><br>
-    <label>Last name</label><br>
-    <input class="last-name" type="text" name="lastName"><br>
+    <label>Email</label><br>
+    <input class="email" type="text" name="email"><br>
     <label>Username</label><br>
     <input class="username" type="text" name="username"><br>
     <label>Password</label><br>
