--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include head %>
 
 <% if (!user) { %>
-<form id="login-form" method="post" action="users/login">
+<form id="login-form" method="post" action="auth/login">
     <h2>Login </h2>
     <label>Username</label><br>
     <input class="username" type="text" name="username"><br>
@@ -9,16 +9,16 @@
     <input class="password" type="password" name="password"><br>
     <input type="submit" value="OK">
 </form><br>
-<a href="users/facebook" class="fb_connect">Connect with Facebook</a><br>
-<a href="users/account-create" class="new-account">Create a new account</a>
+<a href="auth/facebook" class="fb_connect">Connect with Facebook</a><br><br>
+<a href="auth/account-create" class="new-account">Create a new account</a>
 <% } else { %>
 <div class="logged-in">You are logged in as <%= user.username %></div><br>
-<a href="users/profile">My Profile</a><br><br>
+<a href="auth/profile">My Profile</a><br><br>
 
-<form id="logout-form" method="get" action="users/logout">
+<form id="logout-form" method="get" action="auth/logout">
     <input type="submit" value="Log Out">
 </form>
 <% } %>
-<br><br><a href="users/showall">Show all users</a>
+<br><br><a href="auth/showall">Show all users</a>
 
 <% include footer %>
