--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,8 +2,7 @@
 
 <h2>Profile - <%= user.username %></h2>
 <p>Username: <%= user.username %></p>
-<p>First Name: <%= user.firstName %></p>
-<p>Last Name: <%= user.lastName %></p>
+<p>email: <%= user.email %></p>
 <a href="../">Back</a>
 <br>
     
