--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HEP<% if (user) { %> - <%= user.username %><% } %></title>
+	<title>HEB<% if (user) { %> - <%= user.username %><% } %></title>
     <header><h1>Help Expat Berlin</h1></header>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
