--- a/views/css/main.css
+++ b/views/css/main.css
@@ -9,6 +9,22 @@ header {
 	height: 100%;
 }
 
+nav {
+	text-align: center;
+	background-color: #777;
+}
+
+nav a {
+	display: inline-block;
+	padding: 20px;
+	color: #eee;
+    text-decoration: none;
+}
+
+nav a:hover {
+	background-color: #666;
+}
+
 h1 {
 	padding: 30px;
 	margin: 0px;
