Post requests implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,4 +14,8 @@
 <div class="logged-in">You are logged in as <%= user.username %></div><br>
 <% } %>
 
+<div class="request-list">
+	
+</div>
+
 <% include footer %>
