--- a/views/head.ejs
+++ b/views/head.ejs
@@ -9,6 +9,7 @@
 </head>
 <nav>
 	<a href="/">Home</a>
+	<a href="/request/new">New request</a>
 	<% if (user) { %>
 	<a href='/auth/profile/<%= user.id %>''>Profile</a>
 	<a href="/auth/logout">Logout</a>
