Post requests implemented

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <% include head %>
-
+<main>
 <h2>Profile - <%= user.username %></h2>
 <p>Username: <%= user.username %></p>
 <p>email: <%= user.email %></p>
-    
+</main>
 <% include footer %>
