--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -1,5 +1,5 @@
 <% include head %>
-
+<main>
 <% users.forEach((user) => { %>
 	<div class="user-desc">
 	Auth Type: <%= user.authType %><br><br>
@@ -13,7 +13,5 @@
 	</div>
 	<br><br><br>
 <% }); %>
-<a href="../">Back</a>
-<br>
-    
+</main> 
 <% include footer %>
