--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -1,5 +1,5 @@
 <% include head %>
-
+<main>
 <form id="login-form" method="post" action="./new">
     <h2>Create a new user</h2>
     <label>Email</label><br>
@@ -12,5 +12,5 @@
 </form><br>
 <a href="../">Back</a>
 <br>
-    
+</main>
 <% include footer %>
