--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% include head %>
-
+<main>
 <% if (!user) { %>
 <form id="login-form" method="post" action="auth/login">
     <h2>Login </h2>
@@ -18,4 +18,5 @@
 	
 </div>
 
+</main>
 <% include footer %>
