--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -6,10 +6,10 @@
     <br>
     <select name="type" required>
     	<option value="">---</option>
-    	<option value="assist">On site Assistance</option>
-    	<option value="translation">Translation</option>
-    	<option value="phone">Phone Call</option>
-    	<option value="other">Other</option>
+    	<option value="On site Assistance">On site Assistance</option>
+    	<option value="Translation">Translation</option>
+    	<option value="Phone Call">Phone Call</option>
+    	<option value="Other">Other</option>
     </select>
     <br><br>
     <label>Date</label>
