--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,20 @@
 <% include head %>
 <main>
-<h2>Profile - <%= user.username %></h2>
-<p>Username: <%= user.username %></p>
-<p>email: <%= user.email %></p>
+<h2>Profile - <%= profileUser.username %></h2>
+<p>Username: <%= profileUser.username %></p>
+<p>email: <%= profileUser.email %></p>
+
+<% if (requests) { %>
+	<div class="profile-requests">
+	<h3>My requests:</h3>
+	<% requests.forEach(request => { %>
+		<div class="request-container">
+			<%= request.description %><br>
+			Status: <%= request.status %><br>
+			<% if (request.status === 'deleted') { %><a href='/request/remove/<%= request.id %>'>Remove</a><% } %>
+		</div>
+	</div>
+<% });} %>
+
 </main>
 <% include footer %>
