delete/remove requests OK

--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -10,7 +10,7 @@
     <input class="password" type="password" name="password"><br>
     <input type="submit" value="OK">
 </form><br>
-<a href="../">Back</a>
+<a href="/auth/facebook" class="fb_connect">Connect with Facebook</a><br><br>
 <br>
 </main>
 <% include footer %>
