--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <input class="password" type="password" name="password"><br>
     <input type="submit" value="OK">
 </form><br>
-<a href="auth/facebook" class="fb_connect">Connect with Facebook</a><br><br>
+<a href="/auth/facebook" class="fb_connect">Connect with Facebook</a><br><br>
 <% } else { %>
 <div class="logged-in">You are logged in as <%= user.username %></div><br>
 <% } %>
