--- a/views/css/main.css
+++ b/views/css/main.css
@@ -8,6 +8,7 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	min-height: 100%;
+	background-color: #F5F8F0;
 }
 
 header {
@@ -40,7 +41,6 @@ h1 {
 main {
 	padding: 20px;
 	text-align: center;
-	background-color: #F5F8F0;
 }
 
 .error-banner {
@@ -76,13 +76,18 @@ main {
 	padding: 10px;
 }
 
-.details-button {
+.button {
 	border-radius: 3px;
 	padding: 10px;
-	background-color: #9CD4FF;
+	background-color: #5B5B5B;
+	color: #DADADA;
 	cursor: pointer;
 	width: 150px;
 	margin-left: auto;
 	margin-right:auto;
 
+}
+
+.button-help {
+	background-color: #333469;
 }
