add/remove interested

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -15,7 +15,7 @@
 	<a href="/auth/logout">Logout</a>
 	<% } %>
 	<% if (!user) { %>
-	<a href="/auth/account-create">Sign up</a>
+	<a href="/auth/account-login">Log in</a>
 	<% } %>
 	<a href="/auth/showall">All users</a>
 </nav>
