--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -1,7 +1,7 @@
 <% include head %>
 
 <form id="login-form" method="post" action="./new">
-    <h2>Create a new user</h2>
+    <h2>Create a new account</h2>
     <label>Email</label><br>
     <input class="email" type="text" name="email"><br>
     <label>Username</label><br>
@@ -10,7 +10,6 @@
     <input class="password" type="password" name="password"><br>
     <input type="submit" value="OK">
 </form><br>
-<a href="/auth/facebook" class="fb_connect">Connect with Facebook</a><br><br>
-<br>
+<a href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
 
 <% include footer %>
