--- a/views/css/main.css
+++ b/views/css/main.css
@@ -77,17 +77,19 @@ main {
 }
 
 .button {
+	display: inline-block;
 	border-radius: 3px;
 	padding: 10px;
 	background-color: #5B5B5B;
 	color: #DADADA;
 	cursor: pointer;
 	width: 150px;
-	margin-left: auto;
-	margin-right:auto;
-
 }
 
 .button-help {
-	background-color: #333469;
+	background-color: #366933;
+}
+
+.button-revokehelp {
+	background-color: #69333B;
 }
