fixed AJAX and JS for IE

--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -10,6 +10,6 @@
     <input class="password" type="password" name="password"><br>
     <input type="submit" value="OK">
 </form><br>
-<a href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
+<a title ="Your account will be created automatically." href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
 
 <% include footer %>
