--- a/views/head.ejs
+++ b/views/head.ejs
@@ -4,6 +4,8 @@
 	<title>HEB<% if (user) { %> - <%= user.username %><% } %></title>
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
+    <link href="/css/jquery.datetimepicker.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
