--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -14,7 +14,7 @@
     <br><br>
     <label>Date</label>
     <br>
-    <input class="date" type="datetime-local" name="dateevent">
+    <input title="Pick the date and time of the service you require. You can leave the field blank if not applicable." class="date" id="datepicker" type="dateTime" name="dateevent">
     <br>
     <label>Price</label>
     <br>
@@ -30,7 +30,7 @@
     <br>
     <label>Description</label>
     <br>
-    <textarea name="description" cols="40" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
+    <textarea title="Describe the service you require here. Do not provide any personal info." name="description" cols="40" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
     <br><br>
     <input type="submit" value="Submit">
 </form>
