--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -2,14 +2,14 @@
 
 <form id="login-form" method="post" action="./new">
     <h2>Create a new account</h2>
-    <label>Email</label><br>
+    <label for="email">Email</label><br>
     <input class="email" type="text" name="email"><br>
-    <label>Username</label><br>
+    <label for="username">Username</label><br>
     <input class="username" type="text" name="username"><br>
-    <label>Password</label><br>
+    <label for="password">Password</label><br>
     <input class="password" type="password" name="password"><br>
     <input type="submit" value="OK">
 </form><br>
-<a title ="Your account will be created automatically." href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
+<a title ="Your account will be created automatically. Your personal data will not be used or displayed." href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
 
 <% include footer %>
