--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -2,7 +2,7 @@
 
 <form name="login-form" id="login-form" method="post" action="/request/new">
     <h2>Post a new request</h2>
-    <label>Type</label>
+    <label for="type">Type</label>
     <br>
     <select name="type" required>
     	<option value="">---</option>
@@ -12,15 +12,19 @@
     	<option value="Other">Other</option>
     </select>
     <br><br>
-    <label>Date</label>
+    <label for="title">Title</label>
     <br>
-    <input title="Pick the date and time of the service you require. You can leave the field blank if not applicable." class="date" id="datepicker" type="dateTime" name="dateevent">
+    <input class="title" type="text" name="title" required>
     <br>
-    <label>Price</label>
+    <label for="dateevent">Date</label>
+    <br>
+    <input  class="date" id="datepicker" type="dateTime" name="dateevent">
+    <br>
+    <label for="price">Price</label>
     <br>
     <input class="price" type="number" name="price">
     <br>
-    <label>Rate</label>
+    <label for="rate">Rate</label>
     <br>
     <select name="rate">
     	<option value="">---</option>
@@ -28,9 +32,9 @@
     	<option value="perhour">per hour</option>
     </select>
     <br>
-    <label>Description</label>
+    <label for="description">Description</label>
     <br>
-    <textarea title="Describe the service you require here. Do not provide any personal info." name="description" cols="40" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
+    <textarea name="description" cols="40" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
     <br><br>
     <input type="submit" value="Submit">
 </form>
