--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -3,11 +3,11 @@
 <form id="login-form" method="post" action="./new">
     <h2>Create a new account</h2>
     <label for="email">Email</label><br>
-    <input class="email" type="text" name="email"><br>
+    <input class="email" type="text" name="email" required><br>
     <label for="username">Username</label><br>
-    <input class="username" type="text" name="username"><br>
+    <input class="username" type="text" name="username" required><br>
     <label for="password">Password</label><br>
-    <input class="password" type="password" name="password"><br>
+    <input class="password" type="password" name="password" required><br>
     <input type="submit" value="OK">
 </form><br>
 <a title ="Your account will be created automatically. Your personal data will not be used or displayed." href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
