--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -2,10 +2,10 @@
 
 <form id="login-form" method="post" action="/auth/login">
     <h2>Login </h2>
-    <label>Email</label><br>
-    <input class="username" type="text" name="email"><br>
-    <label>Password</label><br>
-    <input class="password" type="password" name="password"><br>
+    <label for="email">Email</label><br>
+    <input class="username" type="text" name="email" required><br>
+    <label for="password">Password</label><br>
+    <input class="password" type="password" name="password" required><br>
     <input type="submit" value="OK">
 </form><br>
 <a href="/auth/facebook" class="fb_connect">Connect with Facebook</a><br><br>
