--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,6 +2,12 @@
 <html>
 <head>
 	<title>HEB<% if (user) { %> - <%= user.username %><% } %></title>
+	
+	<meta name="description" content="Get help from fellow berliners" />
+
+	<!-- Responsive viewport tag, tells small screens that it's responsive -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
