--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,6 +2,7 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
 <script src="/js/jquery.datetimepicker.full.min.js"></script>
+<script src="/js/underscore.js"></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
