--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,11 +7,14 @@
 <% if (user) { %>
 	<% if (String(profile.user._id) == String(profile.currentUser._id)) { %>
 	<div class="profile-body">
-		<div class="button profile-tab">Profile</div>
-		<div class="button requests-tab">Requests</div>
-		<div class="button services-tab">Services</div>
-		<div class="button messages-tab">Messages</div>
-		<div id="profile-container"></div>
+		<div class="button proftab profile-tab">Profile</div>
+		<div class="button proftab requests-tab">Requests</div>
+		<div class="button proftab services-tab">Services</div>
+		<div class="button proftab messages-tab">Messages</div>
+		<div class="now-loading"><img src="/images/ajax_loading.gif"></div>
+		<h3 id="title-profile-section"></h3>
+		<div id="profile-container">
+		</div>
 	</div>
 	<% } %>
 <% } %>
