--- a/views/css/main.css
+++ b/views/css/main.css
@@ -115,6 +115,12 @@ main {
 	cursor: pointer;	
 }
 
+.conv-container {
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .message-container {
 	margin-top: 10px;
 	padding: 10px;
