--- a/views/head.ejs
+++ b/views/head.ejs
@@ -29,7 +29,24 @@
 		<% } %>
 		<a href="/auth/showall">All users</a>
 	</nav>
-</header>
 <% if (errorMessage) { %> <div class="error-banner">Error: <%= errorMessage %></div><% } %>
 <% if (alertMessage) { %> <div class="alert-banner"><%= alertMessage %></div><% } %>
+</header>
+<div class="header-push">
+	<h1>Help Expat Berlin</h1>
+	<nav>
+		<a href="/">Home</a>
+		<% if (user) { %>
+		<a href="/request/new">New request</a>
+		<a href='/auth/profile/<%= user.id %>'>Profile</a>
+		<a href="/auth/logout">Logout</a>
+		<% } %>
+		<% if (!user) { %>
+		<a href="/auth/account-login">Log in</a>
+		<% } %>
+		<a href="/auth/showall">All users</a>
+	</nav>
+<% if (errorMessage) { %> <div class="error-banner">Error: <%= errorMessage %></div><% } %>
+<% if (alertMessage) { %> <div class="alert-banner"><%= alertMessage %></div><% } %>
+</div>
 <main>
