--- a/views/head.ejs
+++ b/views/head.ejs
@@ -32,6 +32,8 @@
 <% if (errorMessage) { %> <div class="error-banner">Error: <%= errorMessage %></div><% } %>
 <% if (alertMessage) { %> <div class="alert-banner"><%= alertMessage %></div><% } %>
 </header>
+
+<!-- HACK TO PUSH HEADER DOWN -->
 <div class="header-push">
 	<h1>Help Expat Berlin</h1>
 	<nav>
@@ -49,4 +51,6 @@
 <% if (errorMessage) { %> <div class="error-banner">Error: <%= errorMessage %></div><% } %>
 <% if (alertMessage) { %> <div class="alert-banner"><%= alertMessage %></div><% } %>
 </div>
+<!-- HACK END -->
+
 <main>
