--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -36,7 +36,7 @@
     <br>
     <textarea name="description" cols="40" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
     <br><br>
-    <input type="submit" value="Submit">
+    <input class="button" type="submit" value="Submit">
 </form>
 
 <% include footer %>
