--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,6 +11,7 @@
 		<div class="button proftab requests-tab">Requests</div>
 		<div class="button proftab services-tab">Services</div>
 		<div class="button proftab messages-tab">Messages</div>
+		<div class="button proftab ratings-tab">Ratings</div>
 		<div class="now-loading"><img src="/images/ajax_loading.gif"></div>
 		<h3 id="title-profile-section"></h3>
 		<div id="profile-container">
