--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -8,7 +8,7 @@
     <input class="username" type="text" name="username" required><br>
     <label for="password">Password</label><br>
     <input class="password" type="password" name="password" required><br>
-    <input class="button" type="submit" value="OK">
+    <input class="button" type="submit" value="Create">
 </form><br>
 <a title ="Your account will be created automatically. Your personal data will not be used or displayed." href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
 
