--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -6,7 +6,7 @@
     <input class="username" type="text" name="email" required><br>
     <label for="password">Password</label><br>
     <input class="password" type="password" name="password" required><br>
-    <input class="button" type="submit" value="OK">
+    <input class="button" type="submit" value="Log in">
 </form><br>
 <a href="/auth/facebook" class="fb_connect">Connect with Facebook</a><br><br>
 Don't have an account yet? <a href="/auth/account-create">Create a new account</a>.
