--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,8 +14,7 @@
 		<div class="button proftab ratings-tab">Ratings</div>
 		<div class="now-loading"><img src="/images/ajax_loading.gif"></div>
 		<h3 id="title-profile-section"></h3>
-		<div id="profile-container">
-		</div>
+		<div id="profile-container"></div>
 	</div>
 	<% } %>
 <% } %>
