--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <% include head %>
-
-<div class="request-list">
-	
-</div>
+<div id="filters"></div>
+<div data-state="closed" id="show-hide-filters">Hide filters</div>
+<div class="request-list"></div>
 
 <% include footer %>
