--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
 	<form id="filters-form">
 		<h4>Filters</h4>
-	    <label for="paid">Requested fee</label>
+	    <label for="paid">Fee</label>
 	    <select name="paid">
 		    <option value="all" <% if (userPrice === 'all') { %> selected <% } %> >Any</option>
 		    <option value="paid" <% if (userPrice === 'paid') { %> selected <% } %> >Paid</option>
