--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -34,7 +34,7 @@
     <br>
     <label for="description">Description</label>
     <br>
-    <textarea name="description" cols="40" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
+    <textarea name="description"  placeholder="Please provide a description of the service you are looking for" required></textarea>
     <br><br>
     <input class="button" type="submit" value="Submit">
 </form>
