--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,17 +1,27 @@
 <% include head %>
 <div class="profile-header">
 	<h2><%= profile.user.username %></h2>
-	<p>Rating: -</p>
+	<% if (profile.user.rating) { %>
+		<p><% for (let i = 0; i < 5; i++ ) { %>
+				<% if (profile.user.rating > i+.75 ) { %>
+					<img src="/images/star-full.png" width="30px">
+				<% } else if (profile.user.rating > i+.25 ) { %>
+					<img src="/images/star-half.png" width="30px">
+				<% } else { %>
+					<img src="/images/star-empty.png" width="30px">
+				<% } %>
+		<% } %></p>
+	<p>Rating: <%= profile.user.rating %>/5 (<%= profile.user.nbRatings %> votes)</p>
+	<% } else { %>
+	<p>Not rated yet</p>
+	<% } %>
+
 </div>
 
 <% if (user) { %>
 	<% if (String(profile.user._id) == String(profile.currentUser._id)) { %>
 	<div class="profile-body">
-		<div class="button proftab profile-tab">Profile</div>
-		<div class="button proftab requests-tab">Requests</div>
-		<div class="button proftab services-tab">Services</div>
-		<div class="button proftab messages-tab">Messages</div>
-		<div class="button proftab ratings-tab">Ratings</div>
+		<div class="button-profile proftab profile-tab">Profile</div><div class="button-profile proftab requests-tab">Requests</div><div class="button-profile proftab services-tab">Services</div><div class="button-profile proftab messages-tab">Messages</div><div class="button-profile proftab ratings-tab">Ratings</div>
 		<div class="now-loading"><img src="/images/ajax_loading.gif"></div>
 		<h3 id="title-profile-section"></h3>
 		<div id="profile-container"></div>
