--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
 					<img src="/images/star-empty.png" width="30px">
 				<% } %>
 		<% } %></p>
-	<p>Rating: <%= profile.user.rating %>/5 (<%= profile.user.nbRatings %> votes)</p>
+	<p>Rating: <%= profile.user.rating %>/5 (<%= profile.user.nbRatings %> ratings)</p>
 	<% } else { %>
 	<p>Not rated yet</p>
 	<% } %>
